complete kotlin getting started series, publish flink datastream